--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mapbox-gl": "^1.3.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
