--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,5 @@ jobs:
       run: npm install
     - name: Deploy to GH Pages
       run: npm run deploy
+      with: 
+        repo-token:  ${{ secrets.GH_ACTION_TOKEN }}
