--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,6 @@ jobs:
     - name: Install Packages
       run: npm install
     - name: Deploy to GH Pages
-      run: npm run deploy
+      run: |
+        git remote set-url origin https://${{ secrets.GH_ACTION_TOKEN }}@github.com/nemac/fcav-mvp.git
+        npm run deploy
