--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "mapbox-gl": "^1.7.0",
+    "leaflet": "^1.7.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^3.0.2",
     "react-scripts": "3.3.1"
   },
   "scripts": {
