--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "date-fns": "^2.16.1",
     "leaflet": "^1.7.1",
+    "leaflet-loading": "^0.1.24",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^3.0.2",
